--- a/charts/zitadel/values.yaml
+++ b/charts/zitadel/values.yaml
@@ -5,14 +5,30 @@ zitadel:
   # https://github.com/zitadel/zitadel/blob/main/cmd/defaults.yaml
   configmapConfig:
     Database:
-      cockroach:
-        Host: "crdb-public"
+      postgres:
+        Host: localhost
+        Port: 5432
+        Database: zitadel
+        MaxOpenConns: 25
+        MaxConnLifetime: 1h
+        MaxConnIdleTime: 5m
+        Options:
         User:
-          SSL:
-            Mode: "verify-full"
-        Admin:
-          SSL:
-            Mode: "verify-full"
+          Username: zitadel
+          Password: zitadel
+        SSL:
+          Mode: disable
+          RootCert:
+          Cert:
+          Key:
+      Admin:
+        Username: postgres
+        Password: postgres
+        SSL:
+          Mode: disable
+          RootCert:
+          Cert:
+          Key:
 
     Machine:
       Identification:
